syntax = "proto3";
package common;
option go_package = "github.com/offchainlabs/arbitrum/packages/arb-util/common";

message BigIntegerBuf {
    bytes value = 1;
}

message HashBuf {
    bytes value = 1;
}

message TimeBlocksBuf {
    BigIntegerBuf val = 1;
}

message TimeTicksBuf {
    common.BigIntegerBuf val = 1;
}

message AddressBuf {
    bytes value = 1;
}
